Hori nav bar streamlined Removed redundant classes and css, no longer a gap after it because of padding

--- a/css/horinavbar.css
+++ b/css/horinavbar.css
@@ -1,11 +1,6 @@
 .horinavbar {
     width: 100%;
-    padding: 1px; 
-    background: black;
     color: #edf5e1;
-  }
-
-.items {
     list-style-type: none;
     margin: 0;
     padding: 0;
